--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
   "homepage": "https://github.com/SoLiD513/LessLyrics#readme",
   "dependencies": {
     "axios": "^0.19.1",
-    "dotenv": "^8.2.0",
-    "node-spotify-api": "^1.1.1",
-    "simple-oauth2": "^3.3.0"
+    "dotenv": "^8.2.0"
   }
 }
