--- a/package.json
+++ b/package.json
@@ -18,7 +18,14 @@
   },
   "homepage": "https://github.com/SoLiD513/LessLyrics#readme",
   "dependencies": {
+    "analyrics": "^1.2.0",
     "axios": "^0.19.1",
-    "dotenv": "^8.2.0"
+    "cheerio": "^1.0.0-rc.3",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "node": "^13.11.0",
+    "path": "^0.12.7",
+    "request": "^2.88.2",
+    "require": "^2.4.20"
   }
 }
